# speakie

./: Cargo.toml  README.md
speakie/: Cargo.toml
speakie/examples/: demo.rs
speakie/src/: lib.rs
speakie_enc/: Cargo.toml
speakie_enc/src/: filter.rs  main.rs  output.rs  pitch.rs  reflector.rs
src/: main.rs  speakie.rs
